2_my-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-namespace
spec:
  selector:
    app: my-service-app
  ports:
    - name: http
      protocol: TCP
      port: 80
